--- a/RMSE_TEST/create_data/check_data.ipynb
+++ b/RMSE_TEST/create_data/check_data.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "# 데이터 패스 설정\n",
-    "path = '/home/papalio/test_research/python_edu/test_2024/test_2024/DATA/'\n",
+    "path = '/home/papalio/test_research/python_edu/test_2024/test_2024/DATA/org/sgd/2020/01/01/'\n",
     "\n",
     "file_ta = 'sfc_grid_ta_202001010000.nc'\n",
     "\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,20 +146,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "파일에 포함된 변수들:\n",
+      "=== Dataset 전체 구조 ===\n",
+      "<xarray.Dataset> Size: 8MB\n",
+      "Dimensions:  (ny: 2049, nx: 2049)\n",
+      "Dimensions without coordinates: ny, nx\n",
+      "Data variables:\n",
+      "    data     (ny, nx) int16 8MB ...\n",
+      "Attributes: (12/16)\n",
+      "    title:         SFC GRID FILE\n",
+      "    version:       0\n",
+      "    product_type:  SFC_GRID_rn_day_\n",
+      "    time:          [2020    1    1    0    0    0]\n",
+      "    time_in:       [2023    9   17   20   50   31]\n",
+      "    map_pro:       Lambert Conformal Conic Projection\n",
+      "    ...            ...\n",
+      "    map_slon:      126.0\n",
+      "    map_slat:      38.0\n",
+      "    grid_size:     0.5\n",
+      "    grid_nx:       2049.0\n",
+      "    grid_ny:       2049.0\n",
+      "    stn_num:       1176.0\n",
+      "\n",
+      "=== 데이터 변수들 ===\n",
       "변수 이름: data\n",
-      "  - name: data\n",
-      "  - unit: C\n",
-      "  - data_scale: 10.0\n",
-      "  - transform: value = data / data_scale\n",
-      "\n"
+      "<xarray.DataArray 'data' (ny: 2049, nx: 2049)> Size: 8MB\n",
+      "[4198401 values with dtype=int16]\n",
+      "Dimensions without coordinates: ny, nx\n",
+      "Attributes:\n",
+      "    name:        day rain\n",
+      "    unit:        mm/h\n",
+      "    data_scale:  10.0\n",
+      "    transform:   value = data / data_scale\n",
+      "\n",
+      "=== 속성 정보 ===\n",
+      "title: SFC GRID FILE\n",
+      "version: 0\n",
+      "product_type: SFC_GRID_rn_day_\n",
+      "time: [2020    1    1    0    0    0]\n",
+      "time_in: [2023    9   17   20   50   31]\n",
+      "map_pro: Lambert Conformal Conic Projection\n",
+      "map_nx: 2048.0\n",
+      "map_ny: 2048.0\n",
+      "map_sx: 880.0\n",
+      "map_sy: 1540.0\n",
+      "map_slon: 126.0\n",
+      "map_slat: 38.0\n",
+      "grid_size: 0.5\n",
+      "grid_nx: 2049.0\n",
+      "grid_ny: 2049.0\n",
+      "stn_num: 1176.0\n",
+      "\n",
+      "=== 'data' 변수 샘플 ===\n",
+      "<xarray.DataArray 'data' (ny: 2049, nx: 2049)> Size: 8MB\n",
+      "[4198401 values with dtype=int16]\n",
+      "Dimensions without coordinates: ny, nx\n",
+      "Attributes:\n",
+      "    name:        day rain\n",
+      "    unit:        mm/h\n",
+      "    data_scale:  10.0\n",
+      "    transform:   value = data / data_scale\n",
+      "\n",
+      "=== 'data' 변수 기본 통계 ===\n",
+      "최소값: -9990\n",
+      "최대값: 92\n",
+      "평균값: -8389.3891086154\n"
      ]
     }
    ],
@@ -169,7 +226,7 @@
     "# 파일 경로 설정\n",
     "\n",
     "# Dataset 열기\n",
-    "ds = xr.open_dataset(path+file_ta)\n",
+    "ds = xr.open_dataset(path_rn+file_rn)\n",
     "\n",
     "# 전체 Dataset 출력\n",
     "print(\"=== Dataset 전체 구조 ===\")\n",
